<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>de.saring</groupId>
    <artifactId>st-parent</artifactId>
    <packaging>pom</packaging>
    <name>st-parent</name>
    <version>1.0.0</version>

    <organization>
        <name>Saring</name>
        <url>http://www.saring.de</url>
    </organization>

    <properties>
        <application.name>SportsTracker</application.name>
        <application.mainClass>de.saring.sportstracker.gui.STApplication</application.mainClass>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    
    <modules>
        <module>leafletmap</module>
        <module>st-util</module>
        <module>st-exerciseviewer</module>
        <module>sportstracker</module>
        <module>st-packager</module>
    </modules>

    <repositories>
        <!-- Own repository for libraries missing in Maven central repo (e.g. Garmin FIT) --> 
        <repository>
            <id>SportsTracker repository</id>
            <url>http://saring.de/st-maven-repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>javax.inject</groupId>
            <artifactId>javax.inject</artifactId>
            <version>1</version>
        </dependency>
        <dependency>
            <groupId>eu.lestard</groupId>
            <artifactId>easy-di</artifactId>
            <version>0.3.0</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6</version>
        </dependency>
        <!-- JavaFX version of JFreeChart is currently not available at Maven Central, using a custom build from saring.de repository -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart-fx</artifactId>
            <version>1.0.19</version>
            <exclusions>
                <!-- Exclude all not needed dependecies -->
                <exclusion>
                    <groupId>xml-apis</groupId>
                    <artifactId>xml-apis</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.lowagie</groupId>
                    <artifactId>itext</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- TODO remove when using JavaFX version of JFreeChart from Maven Central repository (currently needed for custom build) -->
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jcommon</artifactId>
            <version>1.0.24</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>8.40.12</version>
        </dependency>
        <!-- Common test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>de.saxsys</groupId>
            <artifactId>jfx-testrunner</artifactId>
            <version>1.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <verbose>false</verbose>
                    <source>9</source>
                    <target>9</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
